--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi blog</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        
+        <section class="header-social-media">
+            <span><a href="">F</a></span>
+            <span><a href="">T</a></span>
+            <span><a href="">I</a></span>
+            <span><a href="">Li</a></span>
+        </section>
+        <section class="header-blog-information">
+            <span></span>
+            <h2>MI BLOG</h2>
+            <div class="header-about-me">
+                <a href="">Sobre mí</a>
+            </div>
+        </section>
     </header>
 </body>
 </html>
