Maquetando el header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi blog</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        
+        <!-- seccion de redes sociales -->
+        <section>
+            <div>
+                <a href="/">Facebook</a>
+                <a href="/">Instagram</a>
+                <a href="/">Linkedin</a>
+                <a href="/">Twitter</a>
+            </div>
+        </section>
+        <!-- barra de navegación -->
+        <nav>
+            <!-- logo de la pagina -->
+            <section>
+                <a href="/">Logo</a>
+            </section>
+            <!-- sobre mí -->
+            <section>
+                <a href="">Sobre mí</a>
+            </section>
+        </nav>
     </header>
 </body>
 </html>
