Agregando algunas clases

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <!-- seccion de redes sociales -->
-        <section>
+        <section class="header-socialmedia">
             <div>
                 <a href="/">Facebook</a>
                 <a href="/">Instagram</a>
@@ -19,7 +19,7 @@
             </div>
         </section>
         <!-- barra de navegación -->
-        <nav>
+        <nav class="nav-about-me">
             <!-- logo de la pagina -->
             <section>
                 <a href="/">Logo</a>
