--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             </div>
         </section>
         <!-- barra de navegación -->
-        <nav class="nav-about-me">
+        <nav>
             <!-- logo de la pagina -->
-            <section>
+            <section class="nav-logo-container">
                 <a href="/">Logo</a>
             </section>
             <!-- sobre mí -->
-            <section>
+            <section class="nav--profile-link">
                 <a href="">Sobre mí</a>
             </section>
         </nav>
