--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi blog</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/font/flaticon.css">
 </head>
 <body>
     <header>
         <!-- seccion de redes sociales -->
         <section class="header-socialmedia">
             <div>
-                <a href="/">Facebook</a>
-                <a href="/">Instagram</a>
-                <a href="/">Linkedin</a>
-                <a href="/">Twitter</a>
+                <a href="/"><span class="flaticon-001-facebook"></span></a>
+                <a href="/"><span class="flaticon-002-twitter"></span></a>
+                <a href="/"><span class="flaticon-011-instagram"></span></a>
+                <a href="/"><span class="flaticon-010-linkedin"></span></a>
             </div>
         </section>
         <!-- barra de navegación -->
