--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
             <!-- logo de la pagina -->
             <section class="nav-logo-container">
-                <a href="/">Logo</a>
+                <a href="/"> <img src="./assets/assets/img/Logo-negro.png" alt="Logo de mi blog"></a>
             </section>
             <!-- sobre mí -->
             <section class="nav--profile-link">
@@ -31,5 +31,8 @@
             </section>
         </nav>
     </header>
+    <main>
+        
+    </main>
 </body>
 </html>
