--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mi blog</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./assets/css/font/flaticon.css">
+    <link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <header>
@@ -32,7 +33,12 @@
         </nav>
     </header>
     <main>
-        
+        <div class="main-title-container">
+            <h1>
+                Conoce las novedades y noticias del mundo de la Ciencia y el Tech.
+            </h1>
+            <a href="">¡Entra ya!</a>
+        </div>
     </main>
 </body>
 </html>
