--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <div class="main-title-container">
             <h1>
-                Conoce las novedades y noticias del mundo de la Ciencia y el Tech.
+                Conoce las novedades y noticias del mundo de la Ciencia y el Tech
             </h1>
             <a href="">¡Entra ya!</a>
         </div>
