--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="main-title-container">
             <h1>
-                Conoce las novedades y noticias del mundo de la Ciencia y el Tech
+                Conoce las novedades y noticias del mundo de la Astronomía y el Tech
             </h1>
             <a href="">¡Entra ya!</a>
         </div>
